# debtool

./: Makefile  README.md  pyproject.toml
package_statistics/: __init__.py  main.py
tests/: test_main.py
